[tool.poetry]
name = "dcns-project"
version = "0.1.0"
description = ""
authors = ["Andrew Glick <17516195+Antyos@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.9"
arcgis = "^2.1.0"
numpy = "^1.24.2"
networkx = "^3.0"
pandas = "^1.5.3"
ipywidgets = "7.6.0"
pyfunctional = "^1.4.3"

[tool.poetry.group.dev.dependencies]
networkx-stubs = "^0.0.1"
pandas-stubs = "^1.5.3"
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
