[tool.poetry]
name = "dcns-project"
version = "0.1.0"
description = ""
authors = [
    "Andrew Glick <17516195+Antyos@users.noreply.github.com>",
    "David Simpson <127239079+dsim49@users.noreply.github.com>",
]

[tool.poetry.dependencies]
python = "~3.9"
arcgis = "^2.1.0"
numpy = "^1.24.2"
networkx = "^3.0"
pandas = "^1.5.3"
ipywidgets = "7.6.0"
pyfunctional = "^1.4.3"
ipykernel = "^6.22.0"
tqdm = "^4.65.0"
scipy = "^1.10.1"
ipympl = "^0.9.3"
pyvis = "^0.3.2"

[tool.poetry.group.dev.dependencies]
networkx-stubs = "^0.0.1"
pandas-stubs = "^1.5.3"
black = "^23.3.0"
mypy = "^1.2.0"
rise = "^5.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
